[package]
name = "chaos-test"
version = "0.1.0"
authors = ["Gheorghe Florian GLAVAN <gglavan@bitdefender.com>"]
edition = "2018"

[dependencies]
cortex-m = {version = "0.7.2", features=['inline-asm']}
chaos = { git = "https://github.com/ghglavan/ChaOS"}
cortex-m-rt = "0.6.13"
cortex-m-semihosting = "0.3.7"
panic-semihosting = "0.5.6"
stm32f3-discovery = "0.6.0"
